Working with textures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,9 @@ file(GLOB_RECURSE SOURCES "${PROJECT_SOURCE_DIR}/src/*.cpp" "${PROJECT_SOURCE_DI
 file(GLOB_RECURSE HEADERS "${PROJECT_SOURCE_DIR}/src/*.h" "${PROJECT_SOURCE_DIR}/include/*.h")
 
 # Add executable (including headers for IDEs, though they are not compiled)
-add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
+add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS}
+        include/Camera.h
+        include/stb_image.h)
 
 # Find SFML components including audio
 find_package(SFML 2.6 COMPONENTS system window graphics audio REQUIRED)
@@ -23,6 +25,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE
     ${PROJECT_SOURCE_DIR}/src
     ${PROJECT_SOURCE_DIR}/include
     ${PROJECT_SOURCE_DIR}/Assets
+    ${PROJECT_SOURCE_DIR}/textures
 )
 
 # Link SFML, GLAD, and OpenGL
